[gd_scene load_steps=10 format=3 uid="uid://bx1axlt1spj4s"]

[ext_resource type="Script" path="res://scripts/card_manager.gd" id="1_e8omb"]
[ext_resource type="PackedScene" uid="uid://bdwfe7rimbggr" path="res://scenes/card_slot.tscn" id="3_fyet2"]
[ext_resource type="PackedScene" uid="uid://cplvrk2gy51ko" path="res://scenes/card_slot_opponent.tscn" id="3_g2fdw"]
[ext_resource type="Script" path="res://scripts/player_hand.gd" id="3_o45ov"]
[ext_resource type="PackedScene" uid="uid://br8f1bygaw2g8" path="res://scenes/deck.tscn" id="4_1c73i"]
[ext_resource type="Script" path="res://scripts/input_manager.gd" id="5_5s7oe"]
[ext_resource type="Script" path="res://scripts/opponent_hand.gd" id="5_60u54"]
[ext_resource type="Script" path="res://scripts/battle_manager.gd" id="7_v7hl8"]
[ext_resource type="PackedScene" uid="uid://dkhfb3afog2oo" path="res://scenes/turn_record.tscn" id="9_dnh65"]

[node name="Main" type="Node2D"]

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_e8omb")

[node name="CardSlot" parent="." instance=ExtResource("3_fyet2")]
position = Vector2(760, 620)

[node name="CardSlot2" parent="." instance=ExtResource("3_fyet2")]
position = Vector2(960, 620)

[node name="CardSlot3" parent="." instance=ExtResource("3_fyet2")]
position = Vector2(1160, 620)

[node name="CardSlotOpponent" parent="." instance=ExtResource("3_g2fdw")]
position = Vector2(760, 370)

[node name="CardSlotOpponent2" parent="." instance=ExtResource("3_g2fdw")]
position = Vector2(960, 370)

[node name="CardSlotOpponent3" parent="." instance=ExtResource("3_g2fdw")]
position = Vector2(1160, 370)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_o45ov")

[node name="OpponentHand" type="Node2D" parent="."]
script = ExtResource("5_60u54")

[node name="Deck" parent="." instance=ExtResource("4_1c73i")]
position = Vector2(150, 520)

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("5_5s7oe")

[node name="Button" type="Button" parent="."]
offset_left = 910.0
offset_top = 750.0
offset_right = 1010.0
offset_bottom = 790.0
theme_override_font_sizes/font_size = 20
text = "确定"

[node name="Rules" type="Node2D" parent="."]
position = Vector2(-12, 332)

[node name="RichTextLabel" type="RichTextLabel" parent="Rules"]
offset_left = 1653.0
offset_top = 41.0
offset_right = 1746.0
offset_bottom = 96.0
theme_override_colors/default_color = Color(1, 0.827451, 0.137255, 1)
theme_override_font_sizes/normal_font_size = 40
text = "规则"

[node name="RichTextLabel2" type="RichTextLabel" parent="Rules"]
offset_left = 1546.0
offset_top = 109.0
offset_right = 1868.0
offset_bottom = 210.0
theme_override_font_sizes/normal_font_size = 30
text = "同花顺 > 三条 > 顺子 >
同花 > 对子 > 单张高牌"

[node name="RichTextLabel3" type="RichTextLabel" parent="Rules"]
offset_left = 1563.0
offset_top = 214.0
offset_right = 1834.0
offset_bottom = 263.0
theme_override_font_sizes/normal_font_size = 30
text = "♠ > ♥ > ♣ > ♦"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("7_v7hl8")

[node name="BattleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="OpponentWinText" type="RichTextLabel" parent="."]
offset_left = 484.0
offset_top = 349.0
offset_right = 655.0
offset_bottom = 407.0
theme_override_colors/default_color = Color(1, 0.283739, 0.278473, 1)
theme_override_font_sizes/normal_font_size = 33
text = "单张高牌！"

[node name="PlayerWinText" type="RichTextLabel" parent="."]
offset_left = 484.0
offset_top = 596.0
offset_right = 655.0
offset_bottom = 654.0
theme_override_colors/default_color = Color(1, 0.283739, 0.278473, 1)
theme_override_font_sizes/normal_font_size = 33
text = "单张高牌！"

[node name="TurnRecord" parent="." instance=ExtResource("9_dnh65")]
position = Vector2(1288, 774)
scale = Vector2(0.5, 0.5)

[node name="PlayerScore" type="RichTextLabel" parent="."]
offset_left = 1295.0
offset_top = 575.0
offset_right = 1431.0
offset_bottom = 662.0
theme_override_font_sizes/normal_font_size = 60
text = "0"

[node name="GameCount" type="RichTextLabel" parent="."]
offset_left = 1266.0
offset_top = 464.0
offset_right = 1447.0
offset_bottom = 526.0
theme_override_font_sizes/normal_font_size = 40
text = "局: 0"

[node name="OpponentScore" type="RichTextLabel" parent="."]
offset_left = 1295.0
offset_top = 329.0
offset_right = 1431.0
offset_bottom = 416.0
theme_override_font_sizes/normal_font_size = 60
text = "0"

[connection signal="pressed" from="Button" to="BattleManager" method="_on_button_pressed"]
